--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,83 +4,297 @@
   <meta charset="UTF-8" />
   <title>Gerador de Avaliações - MVP</title>
   <style>
+    * { box-sizing: border-box; }
     body {
-      font-family: Arial, sans-serif;
-      background: #0f172a;
+      margin: 0;
+      min-height: 100vh;
+      font-family: 'Segoe UI', Arial, sans-serif;
+      background: linear-gradient(135deg, #020617, #0f172a);
       color: #e5e7eb;
-      padding: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 24px;
     }
-    input, select, button {
-      padding: 10px;
-      margin: 5px 0;
-      width: 300px;
-      display: block;
-    }
-    button {
-      cursor: pointer;
-      background: #2563eb;
-      color: white;
-      border: none;
-    }
-    .box {
+    .container {
+      width: 100%;
+      max-width: 820px;
       background: #020617;
-      padding: 15px;
-      margin-top: 20px;
-      border-radius: 8px;
+      border-radius: 14px;
+      padding: 28px;
+      box-shadow: 0 20px 40px rgba(0,0,0,.6);
+      border: 1px solid #1e293b;
     }
-    a {
+    h1 { margin: 0 0 18px; font-size: 1.7rem; }
+    h2 { margin: 0 0 12px; font-size: 1.2rem; color: #cbd5e1; font-weight: 600; }
+    .muted { color: #94a3b8; font-size: .9rem; }
+    .row { display: flex; gap: 12px; flex-wrap: wrap; }
+    .col { flex: 1; min-width: 220px; }
+    input, select {
+      width: 100%;
+      padding: 12px;
+      border-radius: 10px;
+      border: 1px solid #1e293b;
+      background: #0b1220;
+      color: #e5e7eb;
+      font-size: 1rem;
+      outline: none;
+    }
+    input::placeholder { color: #64748b; }
+    .btn {
+      padding: 12px 14px;
+      border-radius: 10px;
+      border: none;
+      cursor: pointer;
+      font-weight: 700;
+      font-size: 1rem;
+      transition: transform .15s ease, box-shadow .15s ease;
+      width: 100%;
+    }
+    .btn-primary {
+      background: linear-gradient(135deg, #2563eb, #1d4ed8);
+      color: #fff;
+    }
+    .btn-primary:hover {
+      transform: translateY(-1px);
+      box-shadow: 0 10px 20px rgba(37,99,235,.35);
+    }
+    .btn-ghost {
+      background: transparent;
+      color: #93c5fd;
+      border: 1px solid #1e40af;
+      width: auto;
+      padding: 10px 12px;
+    }
+    .topbar {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 12px;
+      margin-bottom: 18px;
+    }
+    .card {
+      margin-top: 16px;
+      padding: 16px;
+      border-radius: 12px;
+      border: 1px solid #1e293b;
+      background: #0b1220;
+    }
+    .result {
+      margin-top: 16px;
+      padding: 16px;
+      border-radius: 12px;
+      border: 1px solid #1e293b;
+      background: #0b1220;
+    }
+    .question { margin: 10px 0; }
+    hr { border: none; border-top: 1px solid #1e293b; margin: 16px 0; }
+    .pdf-links { display: flex; gap: 10px; flex-wrap: wrap; }
+    .pdf-links a {
+      padding: 10px 12px;
+      border-radius: 10px;
+      border: 1px solid #2563eb;
       color: #93c5fd;
       text-decoration: none;
+      background: #081024;
+      transition: transform .15s ease, background .15s ease;
     }
-    a:hover {
-      text-decoration: underline;
-    }
+    .pdf-links a:hover { transform: translateY(-1px); background: #0f1b3a; }
+    .error { color: #fecaca; background: rgba(239,68,68,.12); border: 1px solid rgba(239,68,68,.35); padding: 10px 12px; border-radius: 10px; }
+    .hidden { display: none; }
   </style>
 </head>
-
 <body>
-  <h1>🧠 Gerador de Avaliações</h1>
+  <div class="container">
+    <div class="topbar">
+      <div>
+        <h1>🧠 Gerador de Avaliações</h1>
+        <div class="muted">MVP Hackathon • login obrigatório</div>
+      </div>
+      <button id="logoutBtn" class="btn btn-ghost hidden" onclick="logout()">Sair</button>
+    </div>
 
-  <input id="topic" placeholder="Tema (ex: POO, TypeScript, Geografia)" />
+    <!-- LOGIN -->
+    <div id="loginView" class="card">
+      <h2>Entrar</h2>
+      <div class="muted">Use seu email e senha para acessar.</div>
+      <div style="height:12px"></div>
 
-  <select id="level">
-    <option value="iniciante">Iniciante</option>
-    <option value="intermediario">Intermediário</option>
-    <option value="avancado">Avançado</option>
-  </select>
+      <div class="row">
+        <div class="col">
+          <input id="email" placeholder="Email" />
+        </div>
+        <div class="col">
+          <input id="password" type="password" placeholder="Senha" />
+        </div>
+      </div>
 
-  <input id="amount" type="number" min="1" max="20" value="5" />
+      <div style="height:12px"></div>
+      <button class="btn btn-primary" onclick="login()">Login</button>
 
-  <button onclick="generate()">Gerar avaliação</button>
+      <div style="height:12px"></div>
+      <div id="loginError" class="error hidden"></div>
+    </div>
 
-  <div id="result" class="box">Resultado aparecerá aqui...</div>
+    <!-- APP -->
+    <div id="appView" class="card hidden">
+      <h2>Criar avaliação</h2>
+      <div class="muted">Preencha os dados e gere PDFs (Aluno + Professor).</div>
+      <div style="height:12px"></div>
+
+      <div class="row">
+        <div class="col">
+          <input id="topic" placeholder="Tema (ex: TypeScript, Geografia, POO)" />
+        </div>
+        <div class="col">
+          <select id="level">
+            <option value="iniciante">Iniciante</option>
+            <option value="intermediario">Intermediário</option>
+            <option value="avancado">Avançado</option>
+          </select>
+        </div>
+        <div class="col">
+          <input id="amount" type="number" min="1" max="20" value="5" />
+        </div>
+      </div>
+
+      <div style="height:12px"></div>
+      <button id="generateBtn" class="btn btn-primary" onclick="generate()">Gerar avaliação</button>
+
+      <div id="result" class="result">Após gerar, o resultado aparece aqui.</div>
+    </div>
+  </div>
 
   <script>
+    const TOKEN_KEY = 'hackathon_token'
+
+    function getToken() {
+      return localStorage.getItem(TOKEN_KEY)
+    }
+
+    function setToken(token) {
+      localStorage.setItem(TOKEN_KEY, token)
+    }
+
+    function clearToken() {
+      localStorage.removeItem(TOKEN_KEY)
+    }
+
+    function showLogin() {
+      document.getElementById('loginView').classList.remove('hidden')
+      document.getElementById('appView').classList.add('hidden')
+      document.getElementById('logoutBtn').classList.add('hidden')
+    }
+
+    function showApp() {
+      document.getElementById('loginView').classList.add('hidden')
+      document.getElementById('appView').classList.remove('hidden')
+      document.getElementById('logoutBtn').classList.remove('hidden')
+    }
+
+    function logout() {
+      clearToken()
+      showLogin()
+    }
+
+    // ao carregar, decide tela
+    (function init() {
+      const token = getToken()
+      if (token) showApp()
+      else showLogin()
+    })()
+
+    async function login() {
+      const email = document.getElementById('email').value.trim()
+      const password = document.getElementById('password').value.trim()
+      const errBox = document.getElementById('loginError')
+
+      errBox.classList.add('hidden')
+      errBox.textContent = ''
+
+      try {
+        const res = await fetch('/auth/login', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ email, password })
+        })
+
+        const text = await res.text()
+
+        if (!res.ok) {
+          errBox.textContent = `Erro ${res.status}: ${text}`
+          errBox.classList.remove('hidden')
+          return
+        }
+
+        const data = JSON.parse(text)
+        if (!data.token) {
+          errBox.textContent = 'Login não retornou token.'
+          errBox.classList.remove('hidden')
+          return
+        }
+
+        setToken(data.token)
+        showApp()
+
+      } catch (e) {
+        console.error(e)
+        errBox.textContent = 'Falha no login. Veja o console.'
+        errBox.classList.remove('hidden')
+      }
+    }
+
     async function generate() {
+      const token = getToken()
+      if (!token) {
+        showLogin()
+        return
+      }
+
+      const btn = document.getElementById('generateBtn')
+      btn.disabled = true
+      const oldText = btn.textContent
+      btn.textContent = 'Gerando...'
+
+      const result = document.getElementById('result')
+      result.textContent = 'Gerando avaliação...'
+
       try {
         const topic = document.getElementById('topic').value.trim()
         const level = document.getElementById('level').value
         const amount = Number(document.getElementById('amount').value)
 
-        if (!topic) return alert('Digite o tema!')
-        if (!amount) return alert('Informe a quantidade de questões!')
-
-        const response = await fetch('/questions/generate', {
+        const res = await fetch('/questions/generate', {
           method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
+          headers: {
+            'Content-Type': 'application/json',
+            'Authorization': `Bearer ${token}`
+          },
           body: JSON.stringify({ topic, level, amount })
         })
 
-        const data = await response.json()
+        const text = await res.text()
 
-        const assessment = data.assessment ?? data
-        const pdfs = data.pdfs
+        if (res.status === 401) {
+          clearToken()
+          showLogin()
+          return
+        }
 
-        renderAssessment(assessment, pdfs)
+        if (!res.ok) {
+          result.textContent = `Erro ${res.status}: ${text}`
+          return
+        }
 
-      } catch (error) {
-        console.error(error)
-        alert('Erro ao gerar avaliação (veja o console)')
+        const data = JSON.parse(text)
+        renderAssessment(data.assessment ?? data, data.pdfs)
+
+      } catch (e) {
+        console.error(e)
+        result.textContent = 'Erro ao gerar avaliação. Veja o console.'
+      } finally {
+        btn.disabled = false
+        btn.textContent = oldText
       }
     }
 
@@ -92,38 +306,43 @@
       title.textContent = assessment.title ?? 'Avaliação'
       result.appendChild(title)
 
-      const meta = document.createElement('p')
-      meta.textContent = `Nível: ${assessment.level} | Tempo total: ${assessment.totalTime} min`
+      const meta = document.createElement('div')
+      meta.className = 'muted'
+      meta.textContent = `Nível: ${assessment.level} • Tempo total: ${assessment.totalTime} min`
       result.appendChild(meta)
 
       const questions = assessment.questions ?? []
-
-      questions.forEach((q, index) => {
-        const p = document.createElement('p')
-        p.textContent = `${index + 1}. ${q.statement}`
-        result.appendChild(p)
+      questions.forEach((q, i) => {
+        const div = document.createElement('div')
+        div.className = 'question'
+        div.textContent = `${i + 1}. ${q.statement}`
+        result.appendChild(div)
       })
 
-      // ==== LINKS DOS PDFs ====
-      if (pdfs?.student || pdfs?.teacher) {
+      if (pdfs?.student?.fileName || pdfs?.teacher?.fileName) {
         result.appendChild(document.createElement('hr'))
+        const links = document.createElement('div')
+        links.className = 'pdf-links'
 
         if (pdfs.student?.fileName) {
-          const aluno = document.createElement('a')
-          aluno.href = `/files/${pdfs.student.fileName}`
-          aluno.target = '_blank'
-          aluno.textContent = '📄 Baixar PDF do Aluno'
-          result.appendChild(aluno)
-          result.appendChild(document.createElement('br'))
+          const a = document.createElement('a')
+          a.href = `/files/${pdfs.student.fileName}`
+          a.target = '_blank'
+          a.rel = 'noreferrer'
+          a.textContent = '📄 PDF do Aluno'
+          links.appendChild(a)
         }
 
         if (pdfs.teacher?.fileName) {
-          const professor = document.createElement('a')
-          professor.href = `/files/${pdfs.teacher.fileName}`
-          professor.target = '_blank'
-          professor.textContent = '🧑‍🏫 Baixar PDF do Professor'
-          result.appendChild(professor)
+          const a = document.createElement('a')
+          a.href = `/files/${pdfs.teacher.fileName}`
+          a.target = '_blank'
+          a.rel = 'noreferrer'
+          a.textContent = '🧑‍🏫 PDF do Professor'
+          links.appendChild(a)
         }
+
+        result.appendChild(links)
       }
     }
   </script>
